# youtube

./: .gitignore  README.md
017-python-cli-with-rust/: Cargo.toml  file_generator.py  pyproject.toml  scratch.py
017-python-cli-with-rust/csv_sum/: main.py
017-python-cli-with-rust/data/headers/: headers_0.csv  headers_1.csv  headers_10.csv  headers_100.csv  headers_1000.csv  headers_1001.csv  headers_1003.csv  headers_1004.csv  headers_1005.csv  headers_1006.csv  headers_1007.csv  headers_1008.csv  headers_1009.csv  headers_1010.csv  headers_1012.csv  headers_1014.csv  headers_1015.csv  headers_102.csv  headers_1021.csv  headers_1022.csv  headers_1023.csv  headers_1025.csv  headers_1027.csv  headers_1028.csv  headers_1029.csv  headers_1033.csv  headers_1034.csv  headers_1038.csv  headers_1039.csv  headers_1040.csv  headers_1044.csv  headers_1046.csv  headers_1047.csv  headers_105.csv  headers_1050.csv  headers_1051.csv  headers_1053.csv  headers_1054.csv  headers_1058.csv  headers_106.csv  (+5180 more)
017-python-cli-with-rust/data/index/: index_0.csv  index_1.csv  index_10.csv  index_100.csv  index_1001.csv  index_1002.csv  index_1003.csv  index_1004.csv  index_1005.csv  index_1006.csv  index_1007.csv  index_1009.csv  index_101.csv  index_1016.csv  index_1018.csv  index_1019.csv  index_1021.csv  index_1024.csv  index_1025.csv  index_1028.csv  index_1030.csv  index_1032.csv  index_1033.csv  index_1034.csv  index_1036.csv  index_1037.csv  index_1038.csv  index_1039.csv  index_104.csv  (+5206 more)
017-python-cli-with-rust/src/: lib.rs
code/003-create-clis-with-typer/: pyproject.toml
(+9897 files in other folders)
