[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "csv_sum"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "typer[all]",
]

[project.scripts]
csvsum = "csv_sum.main:app"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "csv_sum._csv_sum"
