[tool.poetry]
name = "smart-car"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "smart_car"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.scripts]
car = "smart_car.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
